@@ -1,0 +1,16 @@
+name: CI
+
+on: [push, pull_request]
+
+jobs:
+
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build
+      run: docker build . -f tests/Dockerfile -t lua-resty-openidc/test
+    - name: Run
+      run: docker run -t --rm lua-resty-openidc/test:latest
