@@ -1,37 +1,0 @@
-language: c
-
-sudo: required
-
-services:
-  - docker
-
-env:
-  global:
-    - VERSION=1.7.5-1
-    - NAME=lua-resty-openidc
-    - ROCKSPEC=$NAME-$VERSION.rockspec
-    - LUAROCKS=3.4.0
-  matrix:
-    - LUA=lua5.1
-
-before_install:
-  - docker build -f tests/Dockerfile . -t lua-resty-openidc/test
-  - source .travis/setenv_lua.sh
-
-install:
-  - luarocks install Lua-cURL --server=https://luarocks.org/dev
-  - luarocks install lunitx
-  - luarocks install JSON4Lua
-
-script:
-  - luarocks make --pack-binary-rock $ROCKSPEC CFLAGS="-O2 -fPIC -fprofile-arcs" LIBFLAG="-shared"
-  - docker run -it --rm lua-resty-openidc/test:latest
-
-# The API key comes from an environment variable configured on https://travis-ci.org
-after_success:
-  - luarocks upload --api-key=$API_KEY $ROCKSPEC
-
-notifications:
-  email:
-    on_success: change
-    on_failure: always
